Fix scrollBarNone on dynamic overlays

--- a/playbook/app/pb_kits/playbook/pb_overlay/_overlay.scss
+++ b/playbook/app/pb_kits/playbook/pb_overlay/_overlay.scss
@@ -78,7 +78,8 @@ $overlay_colors: (
   &.overlay-hide-scrollbar {
     & [class*="overflow_x_auto"],
     & [class*="overflow_y_auto"],
-    & [class*="overflow_auto"] {
+    & [class*="overflow_auto"],
+    .overlay_token_container {
       &::-webkit-scrollbar {
         display: none !important;
       }
